--- a/front.html
+++ b/front.html
@@ -118,7 +118,7 @@
 <button class="tablink" onclick="openPage('Details', this, 'white')">Details</button>
 <button class="tablink" onclick="openPage('Services', this, 'white')">Services</button>
 
-<div id="Processes" class="tabcontent">
+<div id="Processes-s" class="tabcontent">
   <h3>Processes</h3>
 </div>
 
